<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
<modelVersion>4.0.0</modelVersion>
	     	     
	<groupId>org.geojsf</groupId>
	<artifactId>geojsf</artifactId>
	<version>0.1.2-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>GeoJSF</name>
	<url>http://sourceforge.net/projects/geojsf</url>
	<description>JSF Mapping Tool</description>

	<modules>
		<module>bom</module>
		<module>jsf</module>
		<module>doc</module>
		<module>ejb</module>
		<module>api</module>

		<module>theme</module>
		<module>interfaces</module>
		<module>component</module>
		<module>util</module>
		<module>geoserver</module>
		
		<module>xml</module>
	</modules>

	<properties>
		<my.build.directory>target</my.build.directory>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.ignore>file://${basedir}/../maven/src/main/resources/geojsf/maven/ignore-versions.xml</maven.ignore>
	</properties>
	
	<prerequisites>
		<maven>3.1</maven>
	</prerequisites>

	<licenses>
		<license>
			<name>GNU General Public License</name>
			<url>http://www.gnu.org/licenses/gpl-3.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<scm>
		<url>https://github.com/aht-group/geojsf.git</url>
		<connection>scm:git:git://github.com/aht-group/geojsf.git</connection>
		<developerConnection>scm:git:git@github.com/aht-group/geojsf.git</developerConnection>
	</scm>
	
	<developers>
		<developer>
			<id>1</id>
			<name>Thorsten Kisner</name>
			<email>thorsten-k@sourceforge.net</email>
		</developer>
		<developer>
			<id>2</id>
			<name>Helge Hemmer</name>
			<email>hhemmer@uni-wuppertal.de</email>
		</developer>
	</developers>
	
	<issueManagement>
	</issueManagement>
	
	<dependencyManagement>
		<dependencies>
		<!-- 
	         <dependency>
	            <groupId>org.hibernate</groupId>
	            <artifactId>hibernate-validator</artifactId>
	            <version>5.3.5.Final</version>
	            <scope>provided</scope>
	            <exclusions>
	               <exclusion>
	                  <groupId>org.slf4j</groupId>
	                  <artifactId>slf4j-api</artifactId>
	               </exclusion>
	            </exclusions>
	         </dependency>
	          -->
		</dependencies>
	</dependencyManagement>
		
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<inherited>true</inherited>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
				<plugin>
					<groupId>org.jeesl</groupId>
					<artifactId>jeesl-maven</artifactId>
					<version>0.2.6-SNAPSHOT</version>
				</plugin>
				<plugin>
		         <groupId>org.apache.maven.plugins</groupId>
		        	<artifactId>maven-pmd-plugin</artifactId>
		        	<version>3.6</version>
		        	<configuration>
			        	<linkXRef>false</linkXRef>
			      </configuration>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			
			<plugin>
        		<groupId>org.apache.maven.plugins</groupId>
        		<artifactId>maven-enforcer-plugin</artifactId>
        		<version>1.0.1</version>
        		<executions>
          			<execution>
            			<id>enforce-banned-dependencies</id>
            			<goals><goal>enforce</goal></goals>
            			<configuration>
              				<rules>
                				<bannedDependencies>
										<excludes>
                    					<exclude>commons-logging:commons-logging</exclude>
										</excludes>
                				</bannedDependencies>
              				</rules>
              				<fail>true</fail>
            			</configuration>
          			</execution>
        		</executions>
			</plugin>
		</plugins>
	</build>
	
	<pluginRepositories>
		<pluginRepository>
			<id>sonatype.snapshot</id>
			<name>Sonatype Snapshot Repository</name>
			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
			<releases><enabled>false</enabled></releases>
			<snapshots><enabled>true</enabled></snapshots>
		</pluginRepository>
	</pluginRepositories>
	
	<repositories>
        <repository>
			<id>sonatype.snapshot</id>
			<name>Sonatype Snapshot Repository</name>
			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
			<releases><enabled>false</enabled></releases>
			<snapshots><enabled>true</enabled></snapshots>
		</repository>
		<repository>
			<id>aht.3rd</id>
			<name>AHT 3rd party Repository</name>
			<url>https://www.aht-group.com/nexus/content/repositories/thirdparty/</url>
			<releases><enabled>true</enabled></releases>
			<snapshots><enabled>false</enabled></snapshots>
		</repository>
		

		
		<repository>
			<id>hibernatespatial.org</id>
			<name>Hibernate Spatial repo</name>
			<url>https://www.hibernatespatial.org/repository</url>
			<layout>default</layout>
			<releases><enabled>true</enabled></releases>
			<snapshots><enabled>false</enabled></snapshots>
		</repository>
		
		<!-- Only temporarily required until developer has fixed the bug for maven central -->
		<repository>
			<id>bintray</id>
			<name>bintray</name>
			<snapshots><enabled>false</enabled></snapshots>
			<url>https://dl.bintray.com/filosganga/maven</url>
			<layout>default</layout>
		</repository>
		
		<repository>  
		    <id>primefaces.org</id>  
		    <name>PrimeFaces Maven Repository</name>  
		    <url>https://repository.primefaces.org</url>  
		    <layout>default</layout>  
		</repository>
		
		<repository>
		    <id>osgeo</id>
		    <name>Open Source Geospatial Foundation Repository</name>
		    <url>https://repo.osgeo.org/repository/release/</url>
		    <releases>
			<enabled>true</enabled>
		    </releases>
		    <snapshots>
			<enabled>false</enabled>
		    </snapshots>
		</repository>
	</repositories>

	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>

	<profiles>
		<profile>
			<id>ram</id>
			<build>
     			<directory>${my.build.directory}</directory>
     		</build>
  		</profile>
  		<profile>
			<id>release</id>
			<build>
				<directory>${my.build.directory}</directory>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.5</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals><goal>sign</goal></goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>2.2.1</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals><goal>jar-no-fork</goal></goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>2.9.1</version>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals><goal>jar</goal></goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.sonatype.plugins</groupId>
						<artifactId>nexus-staging-maven-plugin</artifactId>
						<version>1.6.7</version>
						<extensions>true</extensions>
						<configuration>
							<serverId>ossrh</serverId>
							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
							<autoReleaseAfterClose>false</autoReleaseAfterClose>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>only-eclipse</id>
			<activation><property><name>m2e.version</name></property></activation>
			<build>
				<pluginManagement>
					<plugins>
						<plugin>
							<groupId>org.eclipse.m2e</groupId>
							<artifactId>lifecycle-mapping</artifactId>
							<version>1.0.0</version>
							<configuration>
								<lifecycleMappingMetadata>
									<pluginExecutions>
		      						<pluginExecution>
	                					<pluginExecutionFilter>
	                  						<groupId>org.apache.maven.plugins</groupId>
	                  						<artifactId>maven-enforcer-plugin</artifactId>
	                  						<versionRange>[1.0.0,)</versionRange>
	                  						<goals><goal>enforce</goal></goals>
	                					</pluginExecutionFilter>
	                					<action><ignore /></action>
	              					</pluginExecution>
		              				<pluginExecution>
												<pluginExecutionFilter>
													<groupId>org.jeesl</groupId>
													<artifactId>jeesl-maven</artifactId>
													<versionRange>[0.2.6-SNAPSHOT,)</versionRange>
													<goals><goal>createSeamSecurity</goal><goal>msgBundle</goal><goal>createJs</goal></goals>
												</pluginExecutionFilter>
												<action><ignore/></action>
											</pluginExecution>
									</pluginExecutions>
								</lifecycleMappingMetadata>
							</configuration>
						</plugin>
					</plugins>
				</pluginManagement>
			</build>
		</profile>
	</profiles>
</project>